gw-api/whoami-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-route
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web # Matches the listener name in Traefik's Gateway configuration
    kind: Gateway
    namespace: traefik
  - name: traefik-gateway-secure
    sectionName: websecure # Matches the listener name in Traefik's Gateway configuration
    kind: Gateway
    namespace: traefik
  hostnames:
  - "whoami-httproute.${DOMAIN}" # Filters traffic by hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami-svc
      port: 80
      weight: 1 # 100% of traffic here if only one backend
